Modified enrollment tab. Adjusted spacing, font size. Fixed bugs.

--- a/assets/css/admintabsMAIN.css
+++ b/assets/css/admintabsMAIN.css
@@ -32,4 +32,25 @@ input[type=text], input[type=date], input[type=time], input[type=tel], textarea{
 
 .form-control:focus, .form-select:focus{
     border-color: maroon;
+    box-shadow: none;
+}
+
+.nav-tabs .nav-link{
+    color:white;
+    padding-top: 0.65rem;
+    padding-bottom: 0.65rem;
+  
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link:hover{
+    border-top-left-radius: 18px;
+    border-top-right-radius:18px;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #495057;
+    background-color: #fff;
+    border-color: #dee2e6 #dee2e6 #fff;
+    border-top-left-radius: 18px;
+    border-top-right-radius:18px;
+    padding-top: 0.65rem;
+    padding-bottom: 0.65rem;
 }
